--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: #f3f2f8
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.PageList {
+    display: flex;
+}
+
+.WheelPage {
+    width: 200px;
+    padding: 20px;
+    border-right: 1px solid #000000;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+}
+
+.OutputColor {
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    background-color: #ffffff;
+    margin-top: auto;
+}
+
+.OutputColor span {
+    display: inline-block;
+    position: absolute;
+    margin-left: .5rem;
+    transform: translateY(55%);
+}
+
+.OutputColor #color {
+    display: inline-block;
+    border-radius: 10px;
+}
+
+.ScrollField {
+    overflow-y: scroll;
+    height: 200px;
+    width: 100%;
 }
